[project]
name = "led-fun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyusb>=1.3.1",
    "typer>=0.19.2",
]

[project.scripts]
led-fun = "led_fun.usb_badge:cli_entry"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
